--- a/1_web/index.html
+++ b/1_web/index.html
@@ -10,6 +10,10 @@
     <h1 id="myH1"></h1>
     <p id="myp"></p>
 
+    <label for="userinput"></label>
+    <input type="text" id="myinput" placeholder="Write something"> <br>
+    <input type="submit" id="mysub">
+
 
     <script src="index.js"></script>
 </body>
